src/terraform/modules/services/messaging/kafka/templates/kafdrop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  namespace: ${namespace}
  labels:
    app: kafdrop
  annotations:
    runterrascan.io/skip: "[{\"rule\": \"AC_K8S_0087\", \"comment\": \"Container requirement\"}]"
    runterrascan.io/skip: "[{\"rule\": \"AC_K8S_0078\", \"comment\": \"Container requirement\"}]"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka #name of deployed kafka service
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop:3.31.0
          ports:
            - containerPort: 9000
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: 15m
              memory: 100M
            limits:
              cpu: 15m
              memory: 550M
