src/terraform/modules/services/messaging/kafka/templates/kafdrop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: ${namespace}
  labels:
    name: kafdrop
spec:
  ports:
    - port: 9000
      targetPort: 9000
      name: kafdrop
      protocol: TCP
  selector:
    app: kafka #name of deployed kafka service
  type: ClusterIP
