src/terraform/modules/services/messaging/kafka/templates/kafdrop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop
  namespace: ${namespace}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-http@kubernetescrd
    runterrascan.io/skip: "[{\"rule\": \"AC_K8S_0002\", \"comment\": \"TLS Termination on reverse proxy\"}]"
spec:
  rules:
    - host: kafka.infrastructure.${domain-name}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafdrop
                port:
                  number: 9000
  tls:
  - secretName: kafka-cert
    hosts:
    - kafka.infrastructure.${domain-name}
